Fix text alignment

--- a/src/css/car/DDC.css
+++ b/src/css/car/DDC.css
@@ -1,8 +1,9 @@
 .car-ddc-body {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     max-width: 40%;
-    text-align: end;
+    text-align: start;
 }
 
 .car-price-image {
@@ -53,7 +54,8 @@
 @media (max-width: 1224px) {
     .car-ddc-body {
         max-width: 89%;
-        text-align: center;
+        align-items: center !important;
+        text-align: left;
     }
 
     .center-mobile {
